backend : project scaffolding

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpc_aeig",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "Mini plateforme de gestion de projets collaboratifs",
   "main": "app.js",
@@ -21,6 +21,9 @@
   "author": "mawou.aa@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^11.0.0",
+    "awilix-express": "^9.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
